--- a/views/san-pham.hbs
+++ b/views/san-pham.hbs
@@ -45,7 +45,7 @@
 						class="form-control"></div>
 			</div>
 			<div>
-				<button type="submit" class="btn btn-success btn-sm">
+				<button type="button" class="btn btn-success btn-sm">
 					<i class="fa fa-dot-circle-o"></i> Tìm kiếm
 				</button>
 				<button type="reset" class="btn btn-danger btn-sm">
@@ -55,57 +55,22 @@
 		</form>
 	</div>
 	<div class="container">
-		<div class="row justify-content-center" id = "categories">
+		<div class="row justify-content-center" id="categories">
 			<div class="col-md-10 mb-5 text-center">
 				<ul class="product-category">
 					<li><a href="/san-pham" class="active">Tất cả</a></li>
 					{{#each categorys}}
-					<li><a href="/san-pham/{{{_id}}}">{{{name}}}</a></li>
+
+					<span id="categories">
+
+					<li><a href="/san-pham/loai/{{{_id}}}">{{{name}}}</a></li>
+					</span>
 					{{/each}}
 				</ul>
 			</div>
 		</div>
 		<div class="row" id="listProduct">
-			{{#each products}}
-			<div class="col-md-6 col-lg-3 ftco-animate">
-				<div class="product">
-					<a href="/san-pham/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid"
-							src="{{{img}}}" alt="Colorlib Template">
-						{{#if salePrice}}
-						<span class="status">SALE</span>
-						{{/if}}
-						<div class="overlay"></div>
-					</a>
-					<div class="text py-3 pb-4 px-3 text-center">
-						<h3><a href="/san-pham/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
-						<div class="d-flex">
-							<div class="pricing">
-								{{#if salePrice}}
-								<p class="price"><span class="mr-2 price-dc">&#8363;{{{price}}}</span><span
-										class="price-sale">&#8363;{{{salePrice}}}</span></p>
-								{{else}}
-								<p class="price"><span class="mr-2 price-sale">&#8363;{{{price}}}</span></p>
-								{{/if}}
-							</div>
-						</div>
-						<div class="bottom-area d-flex px-3">
-							<div class="m-auto d-flex">
-								<a href="#"
-									class="add-to-cart d-flex justify-content-center align-items-center text-center">
-									<span><i class="ion-ios-menu"></i></span>
-								</a>
-								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-									<span><i class="ion-ios-cart"></i></span>
-								</a>
-								<a href="#" class="heart d-flex justify-content-center align-items-center ">
-									<span><i class="ion-ios-heart"></i></span>
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			{{/each}}
+
 		</div>
 		<div class="row mt-5">
 			<div class="col text-center">
@@ -115,21 +80,34 @@
 						<li {{#if disabled}}class="disabled" {{/if}}><a href="?p={{n}}#formsection">&lt;&lt;</a></li>
 						{{/paginate}}
 						{{#paginate pagination type="previous"}}
-						<li {{#if disabled}}class="disabled" {{/if}}><a href="{{page_url}}?p={{n}}#formsection">&lt;</a></li>
+						<li {{#if disabled}}class="disabled" {{/if}}><a href="{{page_url}}?p={{n}}#formsection">&lt;</a>
+						</li>
 						{{/paginate}}
 						{{#paginate pagination type="middle" limit="7"}}
 						<li {{#if active}} class="active" {{/if}}><a href="?p={{n}}#formsection">{{n}}</a></li>
 						{{/paginate}}
 						{{#paginate pagination type="next"}}
-						<li {{#if disabled}}class="disabled" {{/if}}><a href="{{page_url}}?p={{n}}#formsection">&gt;</a></li>
+						<li {{#if disabled}}class="disabled" {{/if}}><a href="{{page_url}}?p={{n}}#formsection">&gt;</a>
+						</li>
 						{{/paginate}}
 						{{#paginate pagination type="last"}}
 						<li {{#if disabled}}class="disabled" {{/if}}><a href="?p={{n}}#formsection">&gt;&gt;</a></li>
 						{{/paginate}}
 					</ul>
-					
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
+<script>
+	var requestProduct = new XMLHttpRequest();
+	requestProduct.onreadystatechange = function () {
+		if (this.readyState == 4 && this.status == 200) {
+			var htmlRendered = this.responseText;
+			$('#listProduct').append(htmlRendered);
+		}
+	};
+	requestProduct.open("GET", "/ajax/san-pham/", true);
+	requestProduct.send();
+
+</script>
