--- a/views/san-pham.hbs
+++ b/views/san-pham.hbs
@@ -12,7 +12,7 @@
 
 <section class="ftco-section" id="formsection">
 	<div class="container">
-		<form action="" method="get" enctype="multipart/form-data" class="form-horizontal">
+		<form action="" method="get" enctype="multipart/form-data" class="form-horizontal" name="filter">
 			<div class="row">
 				<div class="col-md-3 form-group">
 					<label for="sortBy" class=" form-control-label">Sắp xếp theo</label>
@@ -45,7 +45,7 @@
 						class="form-control"></div>
 			</div>
 			<div>
-				<button type="button" class="btn btn-success btn-sm">
+				<button type="submit" class="btn btn-success btn-sm">
 					<i class="fa fa-dot-circle-o"></i> Tìm kiếm
 				</button>
 				<button type="reset" class="btn btn-danger btn-sm">
@@ -57,67 +57,139 @@
 	<div class="container">
 		<div class="row justify-content-center" id="categories">
 			<div class="col-md-10 mb-5 text-center">
-				<ul class="product-category">
+				<ul class="product-category" id="categories">
 					<li><a href="/san-pham" class="active">Tất cả</a></li>
 					{{#each categorys}}
-					<span id="categories">
-						<li><a href="javascript:loadCategory('{{{_id}}}')">{{{name}}}</a</li> </span> {{/each}} </ul>
-									</div> </div> <div class="row" id="listProduct">
-
+					<li><a id="{{{_id}}}" href="javascript:loadCategory('{{{_id}}}')">{{{name}}}</a></li>
+					{{/each}}
+				</ul>
 			</div>
-			<div class="row mt-5">
-				<div class="col text-center">
-					<div class="block-27">
-						<ul>
-							{{#paginate pagination type="first"}}
-							<li {{#if disabled}}class="disabled" {{/if}}><a href="?p={{n}}#formsection">&lt;&lt;</a>
-							</li>
-							{{/paginate}}
-							{{#paginate pagination type="previous"}}
-							<li {{#if disabled}}class="disabled" {{/if}}><a
-									href="{{page_url}}?p={{n}}#formsection">&lt;</a>
-							</li>
-							{{/paginate}}
-							{{#paginate pagination type="middle" limit="7"}}
-							<li {{#if active}} class="active" {{/if}}><a href="?p={{n}}#formsection">{{n}}</a></li>
-							{{/paginate}}
-							{{#paginate pagination type="next"}}
-							<li {{#if disabled}}class="disabled" {{/if}}><a
-									href="{{page_url}}?p={{n}}#formsection">&gt;</a>
-							</li>
-							{{/paginate}}
-							{{#paginate pagination type="last"}}
-							<li {{#if disabled}}class="disabled" {{/if}}><a href="?p={{n}}#formsection">&gt;&gt;</a>
-							</li>
-							{{/paginate}}
-						</ul>
+		</div>
+		<div class="row" id="listProduct">
+			{{#each products}}
+			<div class="col-md-6 col-lg-3 ftco-animate">
+				<div class="product">
+					<a href="/san-pham/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid"
+							src="{{{img}}}" alt="Colorlib Template">
+						{{#if salePrice}}
+						<span class="status">SALE</span>
+						{{/if}}
+						<div class="overlay"></div>
+					</a>
+					<div class="text py-3 pb-4 px-3 text-center">
+						<h3><a href="/san-pham/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
+						<div class="d-flex">
+							<div class="pricing">
+								{{#if salePrice}}
+								<p class="price"><span class="mr-2 price-dc">&#8363;{{{price}}}</span><span
+										class="price-sale">&#8363;{{{salePrice}}}</span></p>
+								{{else}}
+								<p class="price"><span class="mr-2 price-sale">&#8363;{{{price}}}</span></p>
+								{{/if}}
+							</div>
+						</div>
+						<div class="bottom-area d-flex px-3">
+							<div class="m-auto d-flex">
+								<a href="#"
+									class="add-to-cart d-flex justify-content-center align-items-center text-center">
+									<span><i class="ion-ios-menu"></i></span>
+								</a>
+								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+									<span><i class="ion-ios-cart"></i></span>
+								</a>
+								<a href="#" class="heart d-flex justify-content-center align-items-center ">
+									<span><i class="ion-ios-heart"></i></span>
+								</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
+			{{/each}}
 		</div>
+		<div class="row mt-5">
+			<div class="col text-center">
+				<div class="block-27">
+					<ul>
+						{{#paginate pagination type="first"}}
+						<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&lt;&lt;</a>
+						</li>
+						{{/paginate}}
+						{{#paginate pagination type="previous"}}
+						<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&lt;</a>
+						</li>
+						{{/paginate}}
+						{{#paginate pagination type="middle" limit="7"}}
+						<li {{#if active}} class="active" {{/if}}><a href="javascript:page({{n}})">{{n}}</a></li>
+						{{/paginate}}
+						{{#paginate pagination type="next"}}
+						<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&gt;</a>
+						</li>
+						{{/paginate}}
+						{{#paginate pagination type="last"}}
+						<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&gt;&gt;</a>
+						</li>
+						{{/paginate}}
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 <script>
-	var requestProduct = new XMLHttpRequest();
-	requestProduct.onreadystatechange = function () {
-		if (this.readyState == 4 && this.status == 200) {
-			var htmlRendered = this.responseText;
-			$("#listProduct").html(this.responseText);
-		}
-	};
-	requestProduct.open("GET", "/ajax/san-pham/", true);
-	requestProduct.send();
+	var currentCate = 0;
 </script>
 <script>
 	function loadCategory(cateId) {
+		currentCate = cateId;
 		var requestProduct = new XMLHttpRequest();
 		requestProduct.onreadystatechange = function () {
 			if (this.readyState == 4 && this.status == 200) {
 				var htmlRendered = this.responseText;
-				document.getElementById('listProduct').innerHTML='';
+				document.getElementById('listProduct').innerHTML = '';
+				window.history.pushState({ content: htmlRendered }, null, "/san-pham/loai/" + cateId);
 				$("#listProduct").html(htmlRendered);
 			}
 		};
 		requestProduct.open("GET", "/ajax/san-pham/loai/" + cateId, true);
 		requestProduct.send();
 	}
+</script>
+<script>
+	function page(pageIndex) {
+		var requestProduct = new XMLHttpRequest();
+		requestProduct.onreadystatechange = function () {
+			if (this.readyState == 4 && this.status == 200) {
+				var htmlRendered = this.responseText;
+				document.getElementById('listProduct').innerHTML = '';
+				$("#listProduct").html(htmlRendered);
+			}
+		};
+		if (!currentCate)
+			requestProduct.open("GET", "/ajax/san-pham?p=" + pageIndex, true);
+		else requestProduct.open("GET", "/ajax/san-pham/loai/" + currentCate + "?p=" + pageIndex, true);
+		requestProduct.send();
+	}
+</script>
+<script>
+	$("[name='filter']").submit(function (e) {
+		e.preventDefault();
+		const sortBy = document.forms["filter"]["sortBy"].value;
+		const orderBy = document.forms["filter"]["orderBy"].value;
+		const minCost = document.forms["filter"]["minCost"].value;
+		const maxCost = document.forms["filter"]["maxCost"].value;
+		const name = document.forms["filter"]["productName"].value;
+		var requestProduct = new XMLHttpRequest();
+		requestProduct.onreadystatechange = function () {
+			if (this.readyState == 4 && this.status == 200) {
+				var htmlRendered = this.responseText;
+				document.getElementById('listProduct').innerHTML = '';
+				$("#listProduct").html(htmlRendered);
+			}
+		};
+		if (!currentCate)
+			requestProduct.open("GET", "/ajax/san-pham?sortBy=" + sortBy + "?orderBy=" + orderBy + "?minCost=" + minCost + "?maxCost=" + maxCost + "?productName=" + productName, true);
+		else requestProduct.open("GET", "/ajax/san-pham/loai/" + currentCate + "?sortBy=" + sortBy + "?orderBy=" + orderBy + "?minCost=" + minCost + "?maxCost=" + maxCost + "?productName=" + productName, true);
+		requestProduct.send();
+	});
 </script>
