--- a/views/san-pham.hbs
+++ b/views/san-pham.hbs
@@ -65,7 +65,8 @@
 				</ul>
 			</div>
 		</div>
-		<div class="row" id="listProduct">
+		<div id= "renderview">
+		<div class="row">
 			{{#each products}}
 			<div class="col-md-6 col-lg-3 ftco-animate">
 				<div class="product">
@@ -134,6 +135,7 @@
 				</div>
 			</div>
 		</div>
+		</div>
 	</div>
 </section>
 <script>
@@ -146,9 +148,9 @@
 		requestProduct.onreadystatechange = function () {
 			if (this.readyState == 4 && this.status == 200) {
 				var htmlRendered = this.responseText;
-				document.getElementById('listProduct').innerHTML = '';
+				document.getElementById('renderview').innerHTML = '';
 				window.history.pushState({ content: htmlRendered }, null, "/san-pham/loai/" + cateId);
-				$("#listProduct").html(htmlRendered);
+				$("#renderview").html(htmlRendered);
 			}
 		};
 		requestProduct.open("GET", "/ajax/san-pham/loai/" + cateId, true);
@@ -161,8 +163,8 @@
 		requestProduct.onreadystatechange = function () {
 			if (this.readyState == 4 && this.status == 200) {
 				var htmlRendered = this.responseText;
-				document.getElementById('listProduct').innerHTML = '';
-				$("#listProduct").html(htmlRendered);
+				document.getElementById('renderview').innerHTML = '';
+				$("#renderview").html(htmlRendered);
 			}
 		};
 		if (!currentCate)
@@ -183,8 +185,8 @@
 		requestProduct.onreadystatechange = function () {
 			if (this.readyState == 4 && this.status == 200) {
 				var htmlRendered = this.responseText;
-				document.getElementById('listProduct').innerHTML = '';
-				$("#listProduct").html(htmlRendered);
+				document.getElementById('renderview').innerHTML = '';
+				$("#renderview").html(htmlRendered);
 			}
 		};
 		if (!currentCate)
