--- a/views/sp-box-template.hbs
+++ b/views/sp-box-template.hbs
@@ -1,56 +1,84 @@
-{{#each products}}
-			<div class="col-md-6 col-lg-3 ftco-animate">
-				<div class="product">
-					<a href="/san-pham/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid"
-							src="{{{img}}}" alt="Colorlib Template">
+<div class="row">
+	{{#each products}}
+	<div class="col-md-6 col-lg-3 ftco-animate">
+		<div class="product">
+			<a href="/san-pham/chi-tiet?productId={{{_id}}}" class="img-prod"><img class="img-fluid" src="{{{img}}}"
+					alt="Colorlib Template">
+				{{#if salePrice}}
+				<span class="status">SALE</span>
+				{{/if}}
+				<div class="overlay"></div>
+			</a>
+			<div class="text py-3 pb-4 px-3 text-center">
+				<h3><a href="/san-pham/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
+				<div class="d-flex">
+					<div class="pricing">
 						{{#if salePrice}}
-						<span class="status">SALE</span>
+						<p class="price"><span class="mr-2 price-dc">&#8363;{{{price}}}</span><span
+								class="price-sale">&#8363;{{{salePrice}}}</span></p>
+						{{else}}
+						<p class="price"><span class="mr-2 price-sale">&#8363;{{{price}}}</span></p>
 						{{/if}}
-						<div class="overlay"></div>
-					</a>
-					<div class="text py-3 pb-4 px-3 text-center">
-						<h3><a href="/san-pham/chi-tiet?productId={{{_id}}}">{{{name}}}</a></h3>
-						<div class="d-flex">
-							<div class="pricing">
-								{{#if salePrice}}
-								<p class="price"><span class="mr-2 price-dc">&#8363;{{{price}}}</span><span
-										class="price-sale">&#8363;{{{salePrice}}}</span></p>
-								{{else}}
-								<p class="price"><span class="mr-2 price-sale">&#8363;{{{price}}}</span></p>
-								{{/if}}
-							</div>
-						</div>
-						<div class="bottom-area d-flex px-3">
-							<div class="m-auto d-flex">
-								<a href="#"
-									class="add-to-cart d-flex justify-content-center align-items-center text-center">
-									<span><i class="ion-ios-menu"></i></span>
-								</a>
-								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-									<span><i class="ion-ios-cart"></i></span>
-								</a>
-								<a href="#" class="heart d-flex justify-content-center align-items-center ">
-									<span><i class="ion-ios-heart"></i></span>
-								</a>
-							</div>
-						</div>
+					</div>
+				</div>
+				<div class="bottom-area d-flex px-3">
+					<div class="m-auto d-flex">
+						<a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
+							<span><i class="ion-ios-menu"></i></span>
+						</a>
+						<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+							<span><i class="ion-ios-cart"></i></span>
+						</a>
+						<a href="#" class="heart d-flex justify-content-center align-items-center ">
+							<span><i class="ion-ios-heart"></i></span>
+						</a>
 					</div>
 				</div>
 			</div>
-			{{/each}}
-              <script src="/js/jquery.min.js"></script>
-  <script src="/js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="/js/popper.min.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/jquery.easing.1.3.js"></script>
-  <script src="/js/jquery.waypoints.min.js"></script>
-  <script src="/js/jquery.stellar.min.js"></script>
-  <script src="/js/owl.carousel.min.js"></script>
-  <script src="/js/jquery.magnific-popup.min.js"></script>
-  <script src="/js/aos.js"></script>
-  <script src="/js/jquery.animateNumber.min.js"></script>
-  <script src="/js/bootstrap-datepicker.js"></script>
-  <script src="/js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="/js/google-map.js"></script>
-  <script src="/js/main.js"></script>
+		</div>
+	</div>
+	{{/each}}
+</div>
+<div class="row mt-5">
+	<div class="col text-center">
+		<div class="block-27">
+			<ul>
+				{{#paginate pagination type="first"}}
+				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&lt;&lt;</a>
+				</li>
+				{{/paginate}}
+				{{#paginate pagination type="previous"}}
+				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&lt;</a>
+				</li>
+				{{/paginate}}
+				{{#paginate pagination type="middle" limit="7"}}
+				<li {{#if active}} class="active" {{/if}}><a href="javascript:page({{n}})">{{n}}</a></li>
+				{{/paginate}}
+				{{#paginate pagination type="next"}}
+				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&gt;</a>
+				</li>
+				{{/paginate}}
+				{{#paginate pagination type="last"}}
+				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&gt;&gt;</a>
+				</li>
+				{{/paginate}}
+			</ul>
+		</div>
+	</div>
+</div>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/jquery-migrate-3.0.1.min.js"></script>
+<script src="/js/popper.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/jquery.easing.1.3.js"></script>
+<script src="/js/jquery.waypoints.min.js"></script>
+<script src="/js/jquery.stellar.min.js"></script>
+<script src="/js/owl.carousel.min.js"></script>
+<script src="/js/jquery.magnific-popup.min.js"></script>
+<script src="/js/aos.js"></script>
+<script src="/js/jquery.animateNumber.min.js"></script>
+<script src="/js/bootstrap-datepicker.js"></script>
+<script src="/js/scrollax.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+<script src="/js/google-map.js"></script>
+<script src="/js/main.js"></script>
