Add Cart (failed find product By Id)

--- a/views/san-pham.hbs
+++ b/views/san-pham.hbs
@@ -94,7 +94,7 @@
 									class="add-to-cart d-flex justify-content-center align-items-center text-center">
 									<span><i class="ion-ios-menu"></i></span>
 								</a>
-								<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+								<a href="/add-to-cart/{{this._id}}" class="buy-now d-flex justify-content-center align-items-center mx-1">
 									<span><i class="ion-ios-cart"></i></span>
 								</a>
 								<a href="#" class="heart d-flex justify-content-center align-items-center ">
@@ -106,6 +106,35 @@
 				</div>
 			</div>
 			{{/each}}
+			<div class="col-md-6 col-lg-3 ftco-animate">
+				<div class="product">
+					<a href="/san-pham/chi-tiet?productId=444" class="img-prod"><img class="img-fluid"
+							src="..." alt="Colorlib Template">
+					</a>
+					<div class="text py-3 pb-4 px-3 text-center">
+						<h3><a href="/san-pham/chi-tiet?productId=444">San pham 444</a></h3>
+						<div class="d-flex">
+							<div class="pricing">
+
+							</div>
+						</div>
+						<div class="bottom-area d-flex px-3">
+							<div class="m-auto d-flex">
+								<a href="#"
+									class="add-to-cart d-flex justify-content-center align-items-center text-center">
+									<span><i class="ion-ios-menu"></i></span>
+								</a>
+								<a href="/add-to-cart/444" class="buy-now d-flex justify-content-center align-items-center mx-1">
+									<span><i class="ion-ios-cart"></i></span>
+								</a>
+								<a href="#" class="heart d-flex justify-content-center align-items-center ">
+									<span><i class="ion-ios-heart"></i></span>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="row mt-5">
 			<div class="col text-center">
